update icon and naming convention

--- a/flatpak/io.github.limebottle.LimeLight.yml
+++ b/flatpak/io.github.limebottle.LimeLight.yml
@@ -24,7 +24,9 @@ modules:
       - cargo --offline build --manifest-path helper/Cargo.toml --release --verbose
       - install -Dm755 helper/target/release/keylightd ${FLATPAK_DEST}/bin/keylightd
       - install -Dm755 helper/target/release/keylight-tray ${FLATPAK_DEST}/bin/limelight
-      - install -Dm644 public/Limecon.png ${FLATPAK_DEST}/share/icons/hicolor/256x256/apps/io.github.limebottle.LimeLight.png
+      - install -Dm644 public/Limecon.png ${FLATPAK_DEST}/share/icons/hicolor/128x128/apps/io.github.limebottle.LimeLight.png
+      - install -Dm644 public/Limecon-256.png ${FLATPAK_DEST}/share/icons/hicolor/256x256/apps/io.github.limebottle.LimeLight.png
+      - install -Dm644 public/Limecon-512.png ${FLATPAK_DEST}/share/icons/hicolor/512x512/apps/io.github.limebottle.LimeLight.png
       - install -Dm644 flatpak/io.github.limebottle.LimeLight.desktop ${FLATPAK_DEST}/share/applications/io.github.limebottle.LimeLight.desktop
       - install -Dm644 flatpak/io.github.limebottle.LimeLight.metainfo.xml ${FLATPAK_DEST}/share/metainfo/io.github.limebottle.LimeLight.metainfo.xml
     sources:
