manifest updates for naming convention

--- a/flatpak/io.github.chimi6.limelight-linux-elgato-lights-controller.desktop
+++ b/flatpak/io.github.chimi6.limelight-linux-elgato-lights-controller.desktop
@@ -3,8 +3,8 @@ Type=Application
 Name=LimeLight
 Comment=Elgato Key Light Controller for Linux
 Exec=limelight
-Icon=io.github.limebottle.LimeLight
-StartupWMClass=io.github.limebottle.LimeLight
+Icon=io.github.chimi6.limelight-linux-elgato-lights-controller
+StartupWMClass=io.github.chimi6.limelight-linux-elgato-lights-controller
 Terminal=false
 Categories=Utility;Settings;
 Keywords=elgato;keylight;light;control;stream;
