--- a/flatpak/io.github.chimi6.limelight-linux-elgato-lights-controller.yml
+++ b/flatpak/io.github.chimi6.limelight-linux-elgato-lights-controller.yml
@@ -1,7 +1,7 @@
 app-id: io.github.chimi6.limelight-linux-elgato-lights-controller
-runtime: org.gnome.Platform
-runtime-version: '48'
-sdk: org.gnome.Sdk
+runtime: org.freedesktop.Platform
+runtime-version: '25.08'
+sdk: org.freedesktop.Sdk
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.rust-stable
 command: limelight
